# quest-potential-new-sites

./: .gitignore  README.md  map.html  requirements.txt  test_locations.xlsx
data/: .gitignore  README.md  data.yaml  locations.xlsx  pyproject.toml  requirements.txt  sample_locations.json  setup.py  test_map.html
data/data/: locations.xlsx
data/sample_dataset/: README.md
data/scripts/: create_sample_dataset.py
data/src/detect_towers/: __init__.py  cli.py  detect.py  map.py  measure.py  train.py
data/src/detect_towers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: __init__.py  cli.py  detect.py  download.py
